@@ -226,27 +226,6 @@ FIPS_EX_OBJ= ../crypto/aes/aes_cbc.o \
 	../crypto/aes/aes_cfb.o \
 	../crypto/aes/aes_ecb.o \
 	../crypto/aes/aes_ofb.o \
-	../crypto/asn1/a_bitstr.o \
-	../crypto/asn1/a_bytes.o \
-	../crypto/asn1/a_dup.o \
-	../crypto/asn1/a_int.o \
-	../crypto/asn1/a_object.o \
-	../crypto/asn1/asn1_err.o \
-	../crypto/asn1/asn1_lib.o \
-	../crypto/asn1/a_type.o \
-	../crypto/asn1/evp_asn1.o \
-	../crypto/asn1/tasn_dec.o \
-	../crypto/asn1/tasn_enc.o \
-	../crypto/asn1/tasn_fre.o \
-	../crypto/asn1/tasn_new.o \
-	../crypto/asn1/tasn_typ.o \
-	../crypto/asn1/tasn_utl.o \
-	../crypto/asn1/t_pkey.o \
-	../crypto/asn1/x_algor.o \
-	../crypto/asn1/x_bignum.o \
-	../crypto/asn1/x_long.o \
-	../crypto/asn1/x_sig.o \
-	../crypto/bio/bio_err.o \
 	../crypto/bio/bio_lib.o \
 	../crypto/bio/b_print.o \
 	../crypto/bio/bss_file.o \
@@ -254,7 +233,6 @@ FIPS_EX_OBJ= ../crypto/aes/aes_cbc.o \
 	../crypto/bn/bn_blind.o \
 	../crypto/bn/bn_ctx.o \
 	../crypto/bn/bn_div.o \
-	../crypto/bn/bn_err.o \
 	../crypto/bn/bn_exp2.o \
 	../crypto/bn/bn_exp.o \
 	../crypto/bn/bn_gcd.o \
@@ -270,10 +248,7 @@ FIPS_EX_OBJ= ../crypto/aes/aes_cbc.o \
 	../crypto/bn/bn_sqr.o \
 	../crypto/bn/bn_word.o \
 	../crypto/bn/bn_x931p.o \
-	../crypto/buffer/buf_err.o \
 	../crypto/buffer/buffer.o \
-	../crypto/conf/conf_err.o \
-	../crypto/cpt_err.o \
 	../crypto/cryptlib.o \
 	../crypto/des/cfb64ede.o \
 	../crypto/des/cfb64enc.o \
@@ -283,38 +258,23 @@ FIPS_EX_OBJ= ../crypto/aes/aes_cbc.o \
 	../crypto/des/ecb_enc.o \
 	../crypto/des/ofb64ede.o \
 	../crypto/des/ofb64enc.o \
-	../crypto/dh/dh_err.o \
 	../crypto/dh/dh_lib.o \
-	../crypto/dsa/dsa_asn1.o \
-	../crypto/dsa/dsa_err.o \
 	../crypto/dsa/dsa_lib.o \
 	../crypto/dsa/dsa_sign.o \
 	../crypto/dsa/dsa_vrf.o \
-	../crypto/dso/dso_err.o \
-	../crypto/ec/ec_err.o \
-	../crypto/engine/eng_err.o \
 	../crypto/engine/eng_init.o \
 	../crypto/engine/eng_lib.o \
 	../crypto/engine/eng_list.o \
 	../crypto/engine/eng_table.o \
-	../crypto/engine/tb_cipher.o \
 	../crypto/engine/tb_dh.o \
 	../crypto/engine/tb_digest.o \
 	../crypto/engine/tb_dsa.o \
 	../crypto/engine/tb_rand.o \
 	../crypto/engine/tb_rsa.o \
-	../crypto/err/err_all.o \
 	../crypto/err/err.o \
 	../crypto/err/err_prn.o \
 	../crypto/evp/digest.o \
-	../crypto/evp/e_aes.o \
-	../crypto/evp/e_des3.o \
-	../crypto/evp/e_des.o \
-	../crypto/evp/evp_enc.o \
-	../crypto/evp/evp_err.o \
-	../crypto/evp/evp_lib.o \
 	../crypto/evp/m_sha1.o \
-	../crypto/evp/p_lib.o \
 	../crypto/evp/p_sign.o \
 	../crypto/evp/p_verify.o \
 	../crypto/ex_data.o \
@@ -322,36 +282,23 @@ FIPS_EX_OBJ= ../crypto/aes/aes_cbc.o \
 	../crypto/mem_clr.o \
 	../crypto/mem_dbg.o \
 	../crypto/mem.o \
-	../crypto/objects/obj_dat.o \
-	../crypto/objects/obj_err.o \
-	../crypto/objects/obj_lib.o \
-	../crypto/ocsp/ocsp_err.o \
-	../crypto/pem/pem_err.o \
-	../crypto/pkcs12/pk12err.o \
-	../crypto/pkcs7/pkcs7err.o \
 	../crypto/rand/md_rand.o \
 	../crypto/rand/rand_egd.o \
-	../crypto/rand/rand_err.o \
 	../crypto/rand/randfile.o \
 	../crypto/rand/rand_lib.o \
 	../crypto/rand/rand_os2.o \
 	../crypto/rand/rand_unix.o \
 	../crypto/rand/rand_win.o \
-	../crypto/rsa/rsa_err.o \
 	../crypto/rsa/rsa_lib.o \
 	../crypto/rsa/rsa_none.o \
 	../crypto/rsa/rsa_oaep.o \
 	../crypto/rsa/rsa_pk1.o \
 	../crypto/rsa/rsa_pss.o \
-	../crypto/rsa/rsa_sign.o \
 	../crypto/rsa/rsa_ssl.o \
 	../crypto/rsa/rsa_x931.o \
 	../crypto/stack/stack.o \
 	../crypto/uid.o \
-	../crypto/ui/ui_err.o \
-	../crypto/x509v3/v3err.o \
-	../crypto/x509v3/v3_hex.o \
-	../crypto/x509/x509_err.o 
+	../crypto/x509v3/v3_hex.o
 
 # DO NOT DELETE THIS LINE -- make depend depends on it.
 
